--- a/man/textlif.1
+++ b/man/textlif.1
@@ -39,6 +39,8 @@ command, before being copied to extended memory with the
 .I
 READFL
 command.
+.PP
+Note: empty (zero length) lines are ignored when transferring from a mass storage device to the HP-41.
 .SH OPTIONS
 .TP
 .I \-s
